--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ function addEndLoadModel()
     {
         setTimeout(""
             + "init_template("
-                            + "false,false,true,"
-                            + "false,false,false,false,false,false);"
+                            + "false,true,true,"
+                            + "false,true,false,false,false,false);"
             + "Trigger_OnEndLoadModel();", 1000);
         //topbar,bottombar,topmagnetbar
         //bomtable,viewtable,pmilist,detail_view,web_tree,meta
